--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
